# BehemironEffekseer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  cppbuild.sh  pom.xml
.github/workflows/: build.yml
platform/: pom.xml
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/Core/: BehemironEffekseerBatchTypes.h  BehemironEffekseerCAPI.cpp  BehemironEffekseerCAPI.h  BehemironEffekseerCollisionTypes.h  CMakeLists.txt  EffekseerBackendCore.cpp  EffekseerBackendCore.h  EffekseerEffectCore.cpp  EffekseerEffectCore.h  EffekseerManagerCore.cpp  EffekseerManagerCore.h
